--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^7.0.4",
     "vitest": "^3.2.4"
   }
